--- a/wordz.html
+++ b/wordz.html
@@ -901,22 +901,6 @@
     #identBox .btn{ padding:6px 10px; font-size:11px; }
     #identBox .identInput{ font-size:11px; }
 
-
-    /* ===== YUM mode (toggle) — theme-safe subtle overlay ===== */
-    .frame{ position:relative; }
-    body.yumMode .frame::before{
-      content:"";
-      position:absolute;
-      inset:0;
-      pointer-events:none;
-      background:
-        radial-gradient(circle at 20% 10%, rgba(255,255,255,.22), rgba(255,255,255,0) 35%),
-        radial-gradient(circle at 80% 30%, rgba(255,255,255,.18), rgba(255,255,255,0) 40%),
-        linear-gradient(135deg, rgba(255,0,0,.06), rgba(255,255,255,0) 55%);
-      mix-blend-mode: soft-light;
-      opacity:.9;
-    }
-
 </style>
 </head>
 
@@ -984,25 +968,16 @@
               <span class="tiny" style="width:40px;">user</span>
               <input class="input identInput" id="identUser" placeholder="You" maxlength="18" style="padding:6px 8px; min-width:0; flex:1;">
             </div>
-
             <div style="display:flex; gap:8px; align-items:center;">
-              <span class="tiny" style="width:40px;">code</span>
-              <input class="input identInput" id="identCode" readonly value="0000000" style="padding:6px 8px; min-width:0; flex:1; opacity:.85;">
+              <span class="tiny" style="width:40px;">key</span>
+              <input class="input identInput" id="identKey" placeholder="••••" type="password" maxlength="32" style="padding:6px 8px; min-width:0; flex:1;">
             </div>
-<div style="display:flex; gap:8px; align-items:center;">
+            <div style="display:flex; gap:8px; align-items:center;">
               <span class="tiny" style="width:40px;">color</span>
               <input id="identColor" type="color" value="#e46a5d" style="width:44px; height:26px; padding:0; border:2px solid; border-color: var(--win-lo) var(--win-hi) var(--win-hi) var(--win-lo); background:#fff;">
               <span class="tiny" id="identGlowHint" style="margin-left:auto;">glow: --</span>
             </div>
-            
-            <div style="display:flex; gap:8px; align-items:center;">
-              <span class="tiny" style="width:40px;">yum</span>
-              <label class="tiny" style="display:flex; align-items:center; gap:8px; cursor:pointer;">
-                <input type="checkbox" id="yumToggle">
-                <span>overlay</span>
-              </label>
-            </div>
-<div style="display:flex; gap:8px;">
+            <div style="display:flex; gap:8px;">
               <button class="btn" id="identLogin" type="button">login</button>
               <button class="btn" id="identReset" type="button">reset</button>
             </div>
@@ -1184,13 +1159,12 @@
     { name: "RoomTemp",    color: "#ffff40", state: "idle",   topics: ["vibe","quiet","timing"] },
     { name: "NullPointer", color: "#ff40ff", state: "online", topics: ["bugs","edges","inputs"] },
     { name: "Archivist",   color: "#aaaaaa", state: "online", topics: ["notes","logs","memory"] },
-  
-    { name: "NeonLobby",   color: "#00ffff", state: "online", topics: ["room","vibe","timing"] },
+    { name: "NeonLobby",   color: "#00ccff", state: "online", topics: ["room","vibe","timing"] },
     { name: "RazorWire",   color: "#ff9900", state: "online", topics: ["edges","bugs","inputs"] },
     { name: "MilkCarton",  color: "#c060ff", state: "idle",   topics: ["vibe","notes","memory"] },
     { name: "SysClock",    color: "#40ffff", state: "online", topics: ["status","timing","ops"] },
-    { name: "ForumBio",    color: "#00ccff", state: "online", topics: ["portal","links","ui"] },
     { name: "BevelBoss",   color: "#ffcc40", state: "idle",   topics: ["ui","edges","notes"] },
+
   ];
 
   const NPC_CHANNELS = ["ROOM","CLAN","SYS"];
@@ -1217,18 +1191,6 @@
     logs: ["^7remember this frame.","^7the log holds."],
     memory: ["^7localStorage: faithful.","^7state preserved."],
   };
-
-  const QUOTES = [
-    "^7“Desks clear. Notes aligned. Pages ready.”",
-    "^7“Information is enough.”",
-    "^7“Shell first. Reality later.”",
-    "^7“Angles: business. Soul: punk.”",
-    "^7“Be kind to the log; it remembers.”",
-    "^7“Local-first. Noise-last.”",
-    "^7“Milk-cream UI, razor edges.”",
-    "^7“Quiet systems still move.”"
-  ];
-
 
   function npcByName(name){
     return NPC_ROSTER.find(n => n.name === name) || null;
@@ -1293,10 +1255,10 @@
   function npcChatterTick(){
     // Don’t start until there is some content
     const lineCount = log.querySelectorAll(".line").length;
-    if (lineCount < 0) return;
+    if (lineCount < 2) return;
 
     // Quiet by default
-    if (!chance(0.80)) return;
+    if (!chance(0.30)) return;
 
     // Pick speaker (sometimes respond to lastNpc)
     let npc = null;
@@ -1309,9 +1271,9 @@
 
     // Pick topic (sometimes mirror last topic)
     const topic = chance(0.45) ? lastTopic : randomTopicFor(npc);
-    let line = pick(TOPIC_LINES[topic] || TOPIC_LINES.ops);
-    if (chance(0.22)) line = pick(QUOTES);
-const replyPrefix = (lastNpc && chance(0.22)) ? `^7@${lastNpc}: ` : "";
+    const line = pick(TOPIC_LINES[topic] || TOPIC_LINES.ops);
+
+    const replyPrefix = (lastNpc && chance(0.22)) ? `^7@${lastNpc}: ` : "";
     const chan = (topic === "ops" || topic === "relay" || topic === "status") ? "SYS"
               : (topic === "clan") ? "CLAN" : "ROOM";
 
@@ -1328,22 +1290,12 @@ const replyPrefix = (lastNpc && chance(0.22)) ? `^7@${lastNpc}: ` : "";
       }
     }
     renderUserList();
-}
-
-  
-
-  // WORDZ_USERLIST_PULSE_GLOBAL (embed-safe) — run ONCE
-  function startUserListPulse(){
-    try{ renderUserList(); }catch(e){}
-    setTimeout(() => { try{ renderUserList(); }catch(e){} }, 0);
-    setTimeout(() => { try{ renderUserList(); }catch(e){} }, 250);
-    setTimeout(() => { try{ renderUserList(); }catch(e){} }, 1200);
   }
 
-// ===== Identity (local-only): user + key => token + unique glow color =====
+  // ===== Identity (local-only): user + key => token + unique glow color =====
   const IDENT_KEY = "wordz_identity_v1";
 
-  let IDENTITY = { user:"You", code:"0000000", color:null, glow:10 };
+  let IDENTITY = { user:"You", token:"----", color:null, glow:10 };
 
   function hash32(str){
     let h = 2166136261;
@@ -1398,9 +1350,7 @@ const replyPrefix = (lastNpc && chance(0.22)) ? `^7@${lastNpc}: ` : "";
     window.WORDZ_USER_GLOW  = Number(IDENTITY.glow || 10);
 
     const pill = document.getElementById("tokenPill");
-    if (pill) pill.textContent = "id: " + (IDENTITY.code || "0000000");
-    const codeEl = document.getElementById("identCode");
-    if (codeEl) codeEl.value = (IDENTITY.code || "0000000");
+    if (pill) pill.textContent = "tkn: " + (IDENTITY.token || "----");
 
     const gh = document.getElementById("identGlowHint");
     if (gh) gh.textContent = "glow: " + String(window.WORDZ_USER_GLOW || 10);
@@ -1419,72 +1369,46 @@ const replyPrefix = (lastNpc && chance(0.22)) ? `^7@${lastNpc}: ` : "";
     }catch(e){}
   }
 
-  function deriveCode7(name, color){
-    const seed = (String(name || "You").trim() + "|" + String(color || "#000000").trim().toLowerCase());
-    const num = hash32(seed) % 10000000; // 7 digits
-    return String(num).padStart(7, "0");
+  function deriveToken(u,k){
+    const seed = (u||"You") + "|" + (k||"");
+    return (hash32(seed).toString(16).toUpperCase().slice(0,4)).padStart(4,"0");
   }
 
-function wireIdentityUI(){
+  function wireIdentityUI(){
     loadIdentity();
 
     const uEl = document.getElementById("identUser");
-const cEl = document.getElementById("identColor");
+    const kEl = document.getElementById("identKey");
+    const cEl = document.getElementById("identColor");
 
     if (uEl) uEl.value = IDENTITY.user || "You";
     if (cEl && IDENTITY.color) cEl.value = IDENTITY.color;
 
     // If no saved color, generate one from current seed.
     if (!IDENTITY.color){
-      const token = deriveCode7(IDENTITY.user, "");
-      IDENTITY.code = token;
+      const token = deriveToken(IDENTITY.user, "");
+      IDENTITY.token = token;
       const seed = (IDENTITY.user||"You") + "|";
       IDENTITY.color = generateUniqueColor(seed);
       IDENTITY.glow = computeGlowFromSeed(seed);
       if (cEl) cEl.value = IDENTITY.color;
     }
 
-    
-
-  // ===== YUM toggle (local-only) =====
-  const YUM_KEY = "wordz_yum_v1";
-  function applyYum(on){
-    document.body.classList.toggle("yumMode", !!on);
-  }
-  function wireYumToggle(){
-    const t = document.getElementById("yumToggle");
-    if (!t) return;
-    let on = false;
-    try{ on = localStorage.getItem(YUM_KEY) === "1"; }catch(e){}
-    t.checked = on;
-    applyYum(on);
-    t.addEventListener("change", () => {
-      const v = t.checked ? "1" : "0";
-      try{ localStorage.setItem(YUM_KEY, v); }catch(e){}
-      applyYum(t.checked);
-      addLine("System", t.checked ? "^7yum overlay: ^2on" : "^7yum overlay: ^7off", "sys", "SYS");
-      saveChat();
-    });
-  }
-
-applyIdentity();
+    applyIdentity();
 
     const applyFromInputs = (forceGenerateColor=false) => {
       const u = (uEl?.value || "You").trim() || "You";
+      const k = (kEl?.value || "");
+      const seed = u + "|" + k;
+
       IDENTITY.user = u;
+      IDENTITY.token = deriveToken(u, k);
+      IDENTITY.glow = computeGlowFromSeed(seed);
 
-      let color = (cEl?.value || IDENTITY.color || "#000000");
       if (forceGenerateColor || !IDENTITY.color){
-        const seed0 = u + "|" + String(color).toLowerCase();
-        IDENTITY.color = generateUniqueColor(seed0);
-        color = IDENTITY.color;
+        IDENTITY.color = generateUniqueColor(seed);
         if (cEl) cEl.value = IDENTITY.color;
-      } else {
-        IDENTITY.color = color;
       }
-
-      IDENTITY.code = deriveCode7(IDENTITY.user, IDENTITY.color);
-      IDENTITY.glow = computeGlowFromSeed(String(IDENTITY.user) + "|" + String(IDENTITY.color).toLowerCase());
 
       applyIdentity();
       saveIdentity();
@@ -1492,12 +1416,12 @@ applyIdentity();
 
     document.getElementById("identLogin")?.addEventListener("click", () => {
       applyFromInputs(true);
-      addLine("System", `^7identity set: ^2${IDENTITY.user} ^7(id ^3${IDENTITY.code}^7)`, "sys", "SYS");
+      addLine("System", `^7identity set: ^2${IDENTITY.user} ^7(tkn ^3${IDENTITY.token}^7)`, "sys", "SYS");
       saveChat();
     });
 
     document.getElementById("identReset")?.addEventListener("click", () => {
-      IDENTITY = { user:"You", code:"0000000", color:null, glow:10 };
+      IDENTITY = { user:"You", token:"----", color:null, glow:10 };
       try{ localStorage.removeItem(IDENT_KEY); }catch(e){}
       if (uEl) uEl.value = "You";
       if (kEl) kEl.value = "";
@@ -1817,18 +1741,9 @@ applyIdentity();
   const savedTheme = (() => { try { return localStorage.getItem(THEME_KEY); } catch(e){ return null; } })();
   setTheme(savedTheme || "yakult");
   wireIdentityUI();
-    wireYumToggle();
-requestAnimationFrame(() => document.documentElement.classList.remove("preload"));
+  requestAnimationFrame(() => document.documentElement.classList.remove("preload"));
 
   const had = loadChat();
-
-  // WORDZ_SEED_HELLO
-  if (log && log.querySelectorAll(".line").length === 0){
-    addLine("System", "^7boot: ^2ok ^7| ^3yakult ^7shell online", "sys", "SYS");
-    const npc0 = (NPC_ROSTER && NPC_ROSTER.length) ? NPC_ROSTER[0] : null;
-    if (npc0) { addLine(npc0.name, "^7welcome to ^1WrdZ^7.", "", "LOBBY"); const p0 = log.lastElementChild; if (p0) styleWhoSpan(p0, npc0.name); }
-    saveChat();
-  }
   if(!had){
     addLine("System", "^2WordZ shell online.", "sys", "SYS");
     addLine("WordZ", "^3typing…", "sys", "CLAN");
@@ -1838,9 +1753,8 @@ requestAnimationFrame(() => document.documentElement.classList.remove("preload")
 
   // ===== NPC panel + ambient chatter =====
   renderUserList();
-  startUserListPulse();
   setInterval(npcPresenceTick, 12000 + Math.floor(Math.random()*6000));
-  setInterval(npcChatterTick, 3000 + Math.floor(Math.random()*3500));
+  setInterval(npcChatterTick, 9000 + Math.floor(Math.random()*7000));
 
   input.focus();
 })();
